backport efforts initial....